# FreeSugus

./: .env  .env.txt  Bot.py
freeSugus/: Cargo.toml
freeSugus/src/: main.rs
freeSugus/src/commands/: mod.rs  spotify_inf.rs
