[package]
name = "free_sugus"
version = "0.1.0"
authors = ["Alexander Schlieper alexander@schlieper.ch"]
edition = "2021"

[dependencies]
serenity = { version="0.11", default-features = false, features = ["cache", "framework", "standard_framework", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
